# oreon-system-manager

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.rs  build.sh  format.sh  resources.gresource.xml  resources.qrc
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  coverage.yml  fedora.yml  lint.yml  mege.yml  merge.yml  release.yml  team-approve.yml
packaging/: oreon-system-manager.desktop
src/: main.cpp  main.rs  mainwindow.cpp  mainwindow.h  process.rs  resources.rs
src/pages/: container_page.rs  containerpage.cpp  containerpage.h  drivers_page.rs  driverspage.cpp  driverspage.h  mod.rs  package_page.rs  packagepage.cpp  packagepage.h  repo_page.rs  repopage.cpp  repopage.h
src/theme/: mod.rs  thememanager.cpp  thememanager.h
src/widgets/: collapsible_output.rs  collapsibleoutput.cpp  collapsibleoutput.h  mod.rs  settings_window.rs  sidebar.cpp  sidebar.h  sidebar.rs
tests/: CMakeLists.txt  test_integration.cpp  test_pages.cpp  test_sidebar.cpp
tests/mocks/: distrobox  dnf  docker
