[package]
name = "oreon-system-manager"
version = "0.1.0"
edition = "2021"
description = "All-in-one system management GUI for Fedora-based Linux distributions"
license = "GPL-3.0"

[[bin]]
name = "oreon-system-manager"
path = "src/main.rs"

[dependencies]
gtk4 = "0.9"
glib = "0.20"
once_cell = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
